[package]
name = "solana_timelock"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_timelock"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["derive", "init-if-needed"] }
anchor-spl = "0.31.1"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build"
  ]

